                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-02-2006 added: New LCD info labels thanks to Jeff McClain.
 - 06-02-2006 fixed: sf.net bug report [1425166]: CDG not working in Library.
 - 06-02-2006 fixed: Player.ShowCodec didn't work if music wasn't playing (eg in Slideshow)
 - 06-02-2006 changed: Bumped skin version to 1.99.  Changes are the render order of control groups is more consistent, and there is no home page fading code.
 - 06-02-2006 fixed: ControlGroup(group).HasFocus(control) bugs.
 - 06-02-2006 fixed: [ 1423069 ] Controller rumble when using IR remote (don't do it)
 - 05-02-2006 fixed: [ 1406355 ] Last.fm Crashing on Personal radio playback (no audio playable after pap filereader timed out)
 - 05-02-2006 fixed: Last.fm - trackinfo for first track in stream was not always shown.
 - 05-02-2006 fixed: dvdplayer would have wrong sync of audio/video in thx test discs. (ripped vobs from those tests will still have wrong sync)
 - 05-02-2006 fixed: spincontrols didn't display any values.
 - 05-02-2006 added: <spinfont> tag to list, thumb and textboxes.
 - 04-02-2006 fixed: "Return to Videos" in the Videos Now Playing window goes to Videos and not the previous window
 - 04-02-2006 fixed: "Return to Music" in the Music Now Playing window goes to Music and not the previous window
 - 04-02-2006 updated: Icelandic language file (Thnx to kristjan)
 - 04-02-2006 updated: Norwegian language file (Thnx to vnm)
 - 04-02-2006 updated: Italian language file (Thnx to kotix)
 - 04-02-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 04-02-2005 updated: Spanish language file (Thnx to jose_t)