@@ -124,6 +124,7 @@ void CGUIWindowOSD::Render()
   }
   if ( g_guiSettings.GetInt("MyVideos.OSDTimeout") &&
       !m_gWindowManager.IsWindowActive(WINDOW_DIALOG_VIDEO_OSD_SETTINGS) &&
+      !m_gWindowManager.IsWindowActive(WINDOW_DIALOG_AUDIO_OSD_SETTINGS) &&
       !m_gWindowManager.IsWindowActive(WINDOW_DIALOG_VIDEO_BOOKMARKS) )
   {
     if ( (timeGetTime() - m_dwOSDTimeOut) > (DWORD)(g_guiSettings.GetInt("MyVideos.OSDTimeout") * 1000))
@@ -222,6 +223,8 @@ bool CGUIWindowOSD::OnMessage(CGUIMessage& message)
       //g_settings.Save();
       // Remove our subdialogs if visible
       CGUIDialog *pDialog = (CGUIDialog *)m_gWindowManager.GetWindow(WINDOW_DIALOG_VIDEO_OSD_SETTINGS);
+      if (pDialog && pDialog->IsRunning()) pDialog->Close();
+      pDialog = (CGUIDialog *)m_gWindowManager.GetWindow(WINDOW_DIALOG_AUDIO_OSD_SETTINGS);
       if (pDialog && pDialog->IsRunning()) pDialog->Close();
       pDialog = (CGUIDialog *)m_gWindowManager.GetWindow(WINDOW_DIALOG_VIDEO_BOOKMARKS);
       if (pDialog && pDialog->IsRunning()) pDialog->Close();
